--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,33 @@
+buildscript {
+    ext {
+        springBootVersion = '1.5.4.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
+}
+
 apply plugin: 'application'
+apply plugin: 'org.springframework.boot'
 
 group = 'com.vranec.jira'
 version = '1.0-SNAPSHOT'
 
 description = "Timesheet generator"
 
-mainClassName = "com.vranec.jira.TimesheetGenerator"
+mainClassName = "com.vranec.jira.TimesheetGeneratorApplication"
 
-repositories {  
-	mavenCentral()
+repositories {
+    mavenCentral()
 }
 dependencies {
     compile group: 'org.apache.commons', name: 'commons-csv', version: '1.1'
     compile group: 'net.rcarz', name: 'jira-client', version: '0.5'
-    testCompile group: 'junit', name: 'junit', version:'4.12'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
