TimesheetGenerator split into multiple classes.

--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -3,3 +3,8 @@ jira.url=https://monetamoneybank.atlassian.net/
 jira.username=
 # Your JIRA password, e.g. Purple-Monkey_Dishwasher.42
 jira.password=
+# How many days to subtract from the current date to determine month of the timesheet.
+# The result day must be inside the target month.
+month.detection.subtract.days=15
+# Whether to ignore invalid server certificates.
+ignore.invalid.server.certificate=true
