--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.5.4.RELEASE'
+        springBootVersion = '1.5.8.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -12,22 +12,45 @@ buildscript {
 
 apply plugin: 'application'
 apply plugin: 'org.springframework.boot'
+apply plugin: "jacoco"
 
 group = 'com.vranec.jira'
 version = '1.0-SNAPSHOT'
 
 description = "Timesheet generator"
 
-mainClassName = "com.vranec.jira.TimesheetGeneratorApplication"
+mainClassName = "com.vranec.configuration.TimesheetGeneratorApplication"
 
 repositories {
     mavenCentral()
 }
+
 dependencies {
-    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.1'
+    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.5'
     compile group: 'net.rcarz', name: 'jira-client', version: '0.5'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter'
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.11.0'
+    testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
 }
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            limit {
+                minimum = 0.7
+            }
+        }
+        rule {
+            element = 'PACKAGE'
+            includes = ['com.vranec.timesheet']
+            limit {
+                minimum = 1
+            }
+        }
+    }
+}
+
+check.dependsOn jacocoTestCoverageVerification
